Bug 154619 - drag and drop - dragging icons doesn't always work
Summary: drag and drop - dragging icons doesn't always work
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-26 04:54 UTC by Vladislav Blanton
Modified: 2008-05-04 20:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vladislav Blanton 2007-12-26 04:54:15 UTC
Version:            (using KDE KDE 3.97.0)
Installed from:    Ubuntu Packages
OS:                Linux

For some reason, it isn't clear, sometimes when I click an icon on-the-go to drag it somewhere it doesn't select the icon but only start a boundary box for multiple selections.  I can't really seem to pin point when this happens, but it happens often enough that I think it is reproducible after at most a dozen tries.
Comment 1 Peter Penz 2007-12-30 17:45:01 UTC
Thanks for the report. I'm aware about this issue but the root cause is inside Qt... I could not find the time yet for fixing this, but I hope I can find a solution until KDE 4.0.1
Comment 2 Dmitry Suzdalev 2008-02-02 13:18:43 UTC
Confirm this. To reproduce you simply need to split a view and try to drag some file from *inactive* view to active => inactive view becomes active and instead of starting a drag it starts to draw multiple selection rect :)

May I vote for this one, Peter? :) I use split function quite a lot, so this bug bugs me ;)
Can you briefly describe what the problem in Qt you've mentioned is? (for curious programmer like me ;) )
Comment 3 Peter Penz 2008-02-02 13:27:43 UTC
> Can you briefly describe what the problem in Qt you've
> mentioned is? (for curious programmer like me ;) ) 

QAbstractItemView from Qt decides whether a signal will be emitted that the dragging has been started or whether the rubberband selection will be shown. So in the use case above the QAbstractItemView implementation decides that a rubberband is shown although a dragging signal should be emitted. The solution to go is fixing the Qt class, not trying to bypass this in derived classes by some hacks. For this we'd need to write a reproducible example with Qt classes only, which requires some effort. My hope is that the issue is fixed in Qt 4.4, but I did not try yet whether this is the case...
Comment 4 Peter Penz 2008-05-04 20:24:58 UTC
SVN commit 803980 by ppenz:

Fixed issue that sometimes the dragging from an inactive view to an active view does not work. Note that this is just a workaround, QAbstractItemView should take care about this itself. I tried to provide a Qt-only example for this, but it is more tricky than I thought: it seems some expensive operations are required, so that the position of the second mouse-move event is outside the item area... I'll retest this issue without workaround if Qt 4.4 final is out.

BUG: 154619

 M  +4 -0      dolphincolumnwidget.cpp  
 M  +6 -0      dolphindetailsview.cpp  
 M  +11 -1     dolphiniconsview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=803980