Fixed issue that sometimes the dragging from an inactive view to an active view does not work. Note that this is just a workaround, QAbstractItemView should take care about this itself. I tried to provide a Qt-only example for this, but it is more tricky than I thought: it seems some expensive operations are required, so that the position of the second mouse-move event is outside the item area... I'll retest this issue without workaround if Qt 4.4 final is out.

BUG: 154619

svn path=/trunk/KDE/kdebase/apps/; revision=803980